--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pywws data file parser for node.js",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && browserify --node -t babelify --no-bundle-external --standalone 'pywws-parse' src/index.js | uglifyjs -c > dist/main.js",
+    "build": "rm -rf dist && mkdir dist && browserify --node -p browserify-derequire -t babelify --no-bundle-external --standalone 'pywws-parse' src/index.js | uglifyjs -c > dist/main.js",
     "tap": "browserify --node -t babelify --no-bundle-external test/*.js | node",
     "test": "npm run tap | faucet",
     "watch": "nodemon -q -w ./src -w ./test -e js -x npm run tap",
@@ -41,6 +41,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "browserify-derequire": "^0.9.4",
     "faucet": "0.0.1",
     "moment": "^2.12.0",
     "nodemon": "^1.9.1",
