--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dist && mkdir dist && browserify --node -p browserify-derequire -t babelify --no-bundle-external --standalone 'pywws-parse' src/index.js | uglifyjs -c > dist/main.js",
-    "tap": "browserify --node -t babelify --no-bundle-external test/*.js | node",
+    "tap": "babel-tape-runner test/*.js",
     "test": "npm run tap | faucet",
     "watch": "nodemon -q -w ./src -w ./test -e js -x npm run tap",
     "prepublish": "npm run build"
@@ -39,6 +39,7 @@
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-transform-regenerator": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
+    "babel-tape-runner": "^2.0.1",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-derequire": "^0.9.4",
